feature(refactor shortern call chain): 对shortern callchain的重构初步

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 replace.byReflect.elements.header=Replace By Reflect
 replace.byReflect.title=Replace By Reflect
+callChain.shortenCallChain=Shorten Call Chain
